# anchor-22

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  version-bump.sh
.github/actions/setup/: action.yaml
.github/actions/setup-solana/: action.yaml
.github/actions/setup-ts/: action.yaml
.github/workflows/: tests.yaml
avm/: Cargo.toml
avm/src/: lib.rs  main.rs
cli/: Cargo.toml
cli/npm-package/: anchor.js  package.json
cli/src/: config.rs  lib.rs  template.rs
client/: Cargo.toml
client/example/: Cargo.toml  run-test.sh
client/example/src/: main.rs
client/src/: cluster.rs  lib.rs
docs/: package.json
docs/src/.vuepress/: config.js
docs/src/cli/: commands.md
docs/src/getting-started/: installation.md  publishing.md  verification.md
docs/src/tutorials/: tutorial-0.md  tutorial-1.md  tutorial-2.md
examples/tutorial/: package.json
examples/tutorial/basic-0/: package.json
examples/tutorial/basic-1/: package.json
examples/tutorial/basic-2/: package.json
examples/tutorial/basic-3/: package.json
examples/tutorial/basic-3/programs/puppet-master/: Cargo.toml
examples/tutorial/basic-4/: package.json
lang/: Cargo.toml
lang/attribute/access-control/: Cargo.toml
lang/attribute/account/: Cargo.toml
lang/attribute/account/src/: lib.rs
lang/attribute/constant/: Cargo.toml
lang/attribute/error/: Cargo.toml
lang/attribute/error/src/: lib.rs
lang/attribute/event/: Cargo.toml
lang/attribute/event/src/: lib.rs
lang/attribute/interface/: Cargo.toml
lang/attribute/interface/src/: lib.rs
lang/attribute/program/: Cargo.toml
lang/attribute/state/: Cargo.toml
lang/attribute/state/src/: lib.rs
lang/derive/accounts/: Cargo.toml
lang/src/: account.rs  account_info.rs  boxed.rs  common.rs  context.rs  cpi_account.rs  cpi_state.rs  error.rs  idl.rs  lib.rs  loader.rs  loader_account.rs  program.rs  program_account.rs  signer.rs  state.rs  system_program.rs  sysvar.rs  unchecked_account.rs  vec.rs
lang/src/accounts/: account.rs  account_loader.rs  cpi_state.rs  loader.rs  program.rs  program_account.rs  sysvar.rs
lang/syn/: Cargo.toml
lang/syn/src/: lib.rs
lang/syn/src/codegen/: error.rs
lang/syn/src/codegen/accounts/: __client_accounts.rs  __cpi_client_accounts.rs  constraints.rs  exit.rs  to_account_infos.rs  to_account_metas.rs  try_accounts.rs
lang/syn/src/codegen/program/: accounts.rs  common.rs  cpi.rs  dispatch.rs  entry.rs  handlers.rs  instruction.rs  mod.rs
lang/syn/src/idl/: file.rs  mod.rs  pda.rs
lang/syn/src/parser/: context.rs  error.rs
lang/syn/src/parser/accounts/: mod.rs
lang/syn/src/parser/program/: instructions.rs  mod.rs  state.rs
lang/tests/: generics_test.rs
spl/: Cargo.toml
spl/src/: associated_token.rs  lib.rs  shmem.rs  token.rs
spl/src/dex/: cpi.rs  middleware.rs  mod.rs  proxy.rs
tests/: package.json
tests/bpf-upgradeable-state/programs/bpf-upgradeable-state/: Cargo.toml
tests/cashiers-check/: package.json
tests/cashiers-check/programs/cashiers-check/: Cargo.toml
tests/cfo/: Cargo.toml  package.json
tests/cfo/programs/cfo/: Cargo.toml
tests/cfo/programs/cfo/src/: lib.rs
tests/cfo/scripts/: common.sh
tests/chat/: package.json
tests/chat/programs/chat/: Cargo.toml
tests/chat/tests/: chat.js
tests/composite/: package.json
tests/composite/programs/composite/: Cargo.toml
tests/custom-coder/: package.json
tests/custom-coder/programs/custom-coder/: Cargo.toml
tests/custom-coder/programs/spl-token/: Cargo.toml
tests/declare-id/: package.json
tests/declare-id/programs/declare-id/: Cargo.toml
tests/errors/: package.json
tests/errors/programs/errors/: Cargo.toml
tests/escrow/: package.json
tests/escrow/programs/escrow/: Cargo.toml
tests/escrow/programs/escrow/src/: lib.rs
tests/events/: package.json
tests/events/programs/events/: Cargo.toml
tests/floats/: package.json
tests/floats/programs/floats/: Cargo.toml
tests/ido-pool/: package.json
tests/ido-pool/programs/ido-pool/: Cargo.toml
tests/interface/: package.json
tests/interface/programs/counter/: Cargo.toml
tests/interface/programs/counter-auth/: Cargo.toml
tests/lockup/: package.json
tests/lockup/docs/: staking.md
tests/lockup/programs/lockup/: Cargo.toml
tests/lockup/programs/registry/: Cargo.toml
tests/misc/: package.json
tests/misc/programs/misc/: Cargo.toml
tests/misc/programs/misc2/: Cargo.toml
tests/misc/tests/: misc.js
tests/multisig/: package.json
tests/multisig/programs/multisig/: Cargo.toml
tests/pda-derivation/: package.json
tests/pda-derivation/programs/pda-derivation/: Cargo.toml
tests/permissioned-markets/: Cargo.toml
tests/permissioned-markets/programs/permissioned-markets/: Cargo.toml
tests/permissioned-markets/programs/permissioned-markets-middleware/: Cargo.toml
tests/permissioned-markets/programs/permissioned-markets/src/: lib.rs
tests/pyth/: package.json
tests/pyth/programs/pyth/: Cargo.toml
tests/pyth/tests/: oracleUtils.ts
tests/safety-checks/programs/account-info/: Cargo.toml
tests/safety-checks/programs/unchecked-account/: Cargo.toml
tests/spl/token-proxy/: package.json
tests/spl/token-proxy/programs/token-proxy/: Cargo.toml
tests/spl/token-proxy/programs/token-proxy/src/: lib.rs
tests/swap/: package.json
tests/swap/programs/swap/: Cargo.toml
tests/system-accounts/: package.json
tests/system-accounts/programs/system-accounts/: Cargo.toml
tests/sysvars/: package.json
tests/sysvars/programs/sysvars/: Cargo.toml
tests/tictactoe/: package.json
tests/tictactoe/programs/tictactoe/: Cargo.toml
tests/typescript/: package.json
tests/zero-copy/: package.json
tests/zero-copy/programs/zero-cpi/: Cargo.toml
ts/: package.json
ts/src/: error.ts  idl.ts  index.ts  provider.ts  workspace.ts
ts/src/coder/: common.ts  index.ts  instruction.ts
ts/src/program/: accounts-resolver.ts  common.ts  context.ts  event.ts  index.ts
ts/src/spl/: token.ts
ts/src/utils/: pubkey.ts  registry.ts  rpc.ts  token.ts
ts/tests/: events.spec.ts  transaction.spec.ts
ts/types/buffer-layout/: index.d.ts
(+31 files in other folders)
