[package]
name = "anchor-cli"
version = "0.18.0"
authors = [ "armaniferrante <armaniferrante@gmail.com>" ]
edition = "2018"

[[bin]]
name = "anchor"
path = "src/bin/main.rs"

[features]
dev = [ ]
default = [ ]

[dependencies]
anyhow = "1.0.32"
serde_json = "1.0"
shellexpand = "2.1.0"
toml = "0.5.8"
dirs = "3.0"
heck = "0.3.1"
flate2 = "1.0.19"
rand = "0.7.3"
tar = "0.4.35"
tokio = "1.0"
pathdiff = "0.2.0"
cargo_toml = "0.9.2"
walkdir = "2"

  [dependencies.clap]
  git = "https://github.com/clap-rs/clap"
  rev = "6fae3f1"

  [dependencies.syn]
  version = "1.0.60"
  features = [ "full", "extra-traits" ]

  [dependencies.anchor-lang]
  path = "../lang"

  [dependencies.anchor-client]
  path = "../client"

  [dependencies.anchor-syn]
  path = "../lang/syn"
  features = [ "idl" ]

  [dependencies.serde]
  version = "1.0.122"
  features = [ "derive" ]

  [dependencies.serum-common]
  path = "../../bh-serumdex/common"
  features = [ "client" ]

  [dependencies.reqwest]
  version = "0.11.4"
  features = [ "multipart", "blocking" ]

  [dependencies.safecoin-sdk]
  path = "../../Safecoin/sdk"

  [dependencies.safecoin-program]
  path = "../../Safecoin/sdk/program"

  [dependencies.safecoin-client]
  path = "../../Safecoin/client"
