[package]
name = "anchor-client"
version = "0.18.0"
authors = [ "Serum Foundation <foundation@projectserum.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Rust client for Anchor programs"

[dependencies]
anyhow = "1.0.32"
regex = "1.4.5"
thiserror = "1.0.20"
url = "2.2.2"

  [dependencies.anchor-lang]
  path = "../lang"
  version = "0.18.0"

  [dependencies.serde]
  version = "1.0.122"
  features = [ "derive" ]

  [dependencies.safecoin-client]
  path = "../../Safecoin/client"

  [dependencies.safecoin-sdk]
  path = "../../Safecoin/sdk"
