[package]
name = "anchor-client"
version = "0.22.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust client for Anchor programs"

[features]
debug = []

[dependencies]
anchor-lang = { path = "../lang", version = "0.22.0" }
anyhow = "1.0.32"
regex = "1.4.5"
serde = { version = "1.0.122", features = ["derive"] }
safecoin-client = { path = "../../Safecoin/client"}
safecoin-sdk = { path = "../../Safecoin/sdk"}
safecoin-account-decoder = { path = "../../Safecoin/account-decoder"}
thiserror = "1.0.20"
url = "2.2.2"
