[package]
name = "anchor-lang"
version = "0.18.0"
authors = [ "Serum Foundation <foundation@projectserum.com>" ]
repository = "https://github.com/project-serum/anchor"
edition = "2018"
license = "Apache-2.0"
description = "Solana Sealevel eDSL"

[features]
derive = [ ]
default = [ ]
anchor-debug = [
  "anchor-attribute-access-control/anchor-debug",
  "anchor-attribute-account/anchor-debug",
  "anchor-attribute-error/anchor-debug",
  "anchor-attribute-event/anchor-debug",
  "anchor-attribute-interface/anchor-debug",
  "anchor-attribute-program/anchor-debug",
  "anchor-attribute-program/anchor-debug",
  "anchor-attribute-state/anchor-debug",
  "anchor-derive-accounts/anchor-debug"
]

[dependencies]
base64 = "0.13.0"
borsh = "0.9"
bytemuck = "1.4.0"
thiserror = "1.0.20"

  [dependencies.anchor-attribute-access-control]
  path = "./attribute/access-control"
  version = "0.18.0"

  [dependencies.anchor-attribute-account]
  path = "./attribute/account"
  version = "0.18.0"

  [dependencies.anchor-attribute-error]
  path = "./attribute/error"
  version = "0.18.0"

  [dependencies.anchor-attribute-program]
  path = "./attribute/program"
  version = "0.18.0"

  [dependencies.anchor-attribute-state]
  path = "./attribute/state"
  version = "0.18.0"

  [dependencies.anchor-attribute-interface]
  path = "./attribute/interface"
  version = "0.18.0"

  [dependencies.anchor-attribute-event]
  path = "./attribute/event"
  version = "0.18.0"

  [dependencies.anchor-derive-accounts]
  path = "./derive/accounts"
  version = "0.18.0"

  [dependencies.safecoin-program]
  path = "../../Safecoin/sdk/program"
