[package]
name = "anchor-attribute-account"
version = "0.18.0"
authors = [ "Serum Foundation <foundation@projectserum.com>" ]
repository = "https://github.com/project-serum/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for defining an account"
edition = "2018"

[lib]
proc-macro = true

[features]
anchor-debug = [ "anchor-syn/anchor-debug" ]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
anyhow = "1.0.32"
rustversion = "1.0.3"
bs58 = "0.4.0"

  [dependencies.syn]
  version = "1.0.60"
  features = [ "full" ]

  [dependencies.anchor-syn]
  path = "../../syn"
  version = "0.18.0"
  features = [ "hash" ]
