[package]
safecoin = "custom-coder"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
safecoin = "custom_coder"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-safecoin = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.0"
