[package]
safecoin = "spl-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
safecoin = "spl_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-safecoin = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.0"
