[package]
name = "escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = [ "cdylib", "lib" ]
name = "escrow"

[features]
no-entrypoint = [ ]
no-idl = [ ]
cpi = [ "no-entrypoint" ]
default = [ ]

[dependencies.anchor-lang]
path = "../../../../lang"

[dependencies.anchor-spl]
path = "../../../../spl"

[dependencies.safe-token]
features = [ "no-entrypoint" ]
path = "../../../../../safecoin-program-library/token/program"
