[package]
safecoin = "account-info"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
safecoin = "account_info"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-safecoin = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.0"
