[package]
name = "token-proxy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = [ "cdylib", "lib" ]
name = "token_proxy"

[features]
no-entrypoint = [ ]
cpi = [ "no-entrypoint" ]

[dependencies.anchor-lang]
path = "../../../../../lang"

[dependencies.anchor-spl]
path = "../../../../../spl"

[dependencies.safe-token]
features = [ "no-entrypoint" ]
path = "../../../../../../safecoin-program-library/token/program"
